--- a/src/main/resources/resources_en.properties
+++ b/src/main/resources/resources_en.properties
@@ -21,6 +21,8 @@ client-cabinet_jsp.p.your_balance = your balance is:
 client-cabinet_jsp.a.back_with_pre_params = you can get back where you leave previous
 
 registration_jsp.error.error_reg = All fields required
+registration_jsp.error.error_symbols = Not valid symbols in Login/First name/Last name field(-s)<br/> (only alphabet, digits, with hyphens, underscores and spaces as internal separators)
+registration_jsp.error.error_taken_login = \u0418\u0437\u0432\u0438\u043d\u0438\u0442\u0435\u0020\u0434\u0430\u043d\u043d\u044b\u0439\u0020\u043b\u043e\u0433\u0438\u043d\u0020\u0443\u0436\u0435\u0020\u0437\u0430\u043d\u044f\u0442
 
 admin-cabinet_jsp.label.user.login = Login
 admin-cabinet_jsp.label.user.first_name = First name
@@ -61,12 +63,16 @@ index_jsp.h3.sport = Sport
 index_jsp.h3.it = IT World
 index_jsp.h3.music = Music
 index_jsp.h3.interior = Interior
+index_jsp.input.search = Search
 
 settings_jsp.label.choose = Choose your language
 settings_jsp.label.language.russian = Russian
 settings_jsp.label.language.english = English
+settings_jsp.error.error_not_valid_symbols_first_name = Not valid symbols in First name field (only alphabet, digits, with hyphens, underscores and spaces as internal separators)
+settings_jsp.error.error_not_valid_symbols_last_name = Not valid symbols in Last name field (only alphabet, digits, with hyphens, underscores and spaces as internal separators)
+settings_jsp.error.error_not_valid_symbols_language = Not valid language format
 
 login_jsp.label.error_logpass = Login or Password cannot be empty
 login_jsp.label.error_blocked = Sorry, your account is blocked
 
-
+header_jsp.error.error_not_valid_symbols_locale = Invalid locale!
